// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`classes.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
@deco class Foo {}

@deco export class Bar {}

@deco export default class Baz {}

const foo = @deco class {
  //
};

const bar =
  @deco
  class {
    //
  };

=====================================output=====================================
@deco
class Foo {}

@deco
export class Bar {}

@deco
export default class Baz {}

const foo =
  @deco
  class {
    //
  };

const bar =
  @deco
  class {
    //
  };

================================================================================
`;

exports[`classes.js format[acorn] 1`] = `
"Unexpected character '@' (1:1)
> 1 | @deco class Foo {}
    | ^
  2 |
  3 | @deco export class Bar {}
  4 |
Cause: Unexpected character '@' (1:0)"
`;

exports[`classes.js format[espree] 1`] = `
"Unexpected character '@' (1:1)
> 1 | @deco class Foo {}
    | ^
  2 |
  3 | @deco export class Bar {}
  4 |
Cause: Unexpected character '@'"
`;

exports[`classes.js format[flow] 1`] = `
"Unexpected token \`@\` (7:13)
   5 | @deco export default class Baz {}
   6 |
>  7 | const foo = @deco class {
     |             ^
   8 |   //
   9 | };
  10 |
Cause: Unexpected token \`@\` (7:12)"
`;

exports[`classes.js format[hermes] 1`] = `
"'class' expected in class (3:7)
  1 | @deco class Foo {}
  2 |
> 3 | @deco export class Bar {}
    |       ^
  4 |
  5 | @deco export default class Baz {}
  6 |
Cause: 'class' expected in class (3:6)
@deco export class Bar {}
~~~~~~^"
`;

exports[`comments.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
var x = 100

@Hello({
  a: 'a', // Comment is in the wrong place
  // test
  b: '2'
})
class X {

}


@NgModule({
  // Imports.
  imports: [
    // Angular modules.
    BrowserModule,

    // App modules.
    CoreModule,
    SharedModule,
  ],
})
export class AppModule {}

// A
@Foo()
// B
@Bar()
// C
export class Bar{}

class Something {
    @Annotateme()
    property;
}

=====================================output=====================================
var x = 100;

@Hello({
  a: "a", // Comment is in the wrong place
  // test
  b: "2",
})
class X {}

@NgModule({
  // Imports.
  imports: [
    // Angular modules.
    BrowserModule,

    // App modules.
    CoreModule,
    SharedModule,
  ],
})
export class AppModule {}

// A
@Foo()
// B
@Bar()
// C
export class Bar {}

class Something {
  @Annotateme()
  property;
}

================================================================================
`;

exports[`comments.js format[acorn] 1`] = `
"Unexpected character '@' (3:1)
  1 | var x = 100
  2 |
> 3 | @Hello({
    | ^
  4 |   a: 'a', // Comment is in the wrong place
  5 |   // test
  6 |   b: '2'
Cause: Unexpected character '@' (3:0)"
`;

exports[`comments.js format[espree] 1`] = `
"Unexpected character '@' (3:1)
  1 | var x = 100
  2 |
> 3 | @Hello({
    | ^
  4 |   a: 'a', // Comment is in the wrong place
  5 |   // test
  6 |   b: '2'
Cause: Unexpected character '@'"
`;

exports[`comments.js format[hermes] 1`] = `
"'class' expected in class (24:1)
  22 |   ],
  23 | })
> 24 | export class AppModule {}
     | ^
  25 |
  26 | // A
  27 | @Foo()
Cause: 'class' expected in class (24:0)
export class AppModule {}
^
note: start of class (13:0)
@NgModule({
^"
`;

exports[`member-expression.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
[
  class {
    @(decorator)
    method() {}
  },
  class {
    @(decorator())
    method() {}
  },
  class {
    @(decorator?.())
    method() {}
  },
  class {
    @(decorators[0])
    method() {}
  },
  class {
    @decorators[0]
    method() {}
  },
  class {
    @(decorators?.[0])
    method() {}
  },
  class {
    @(decorators.at(0))
    method() {}
  },
  class {
    @(decorators?.at(0))
    method() {}
  },
  class {
    @(decorators.at?.(0))
    method() {}
  },
  class {
    @(decorators.first)
    method() {}
  },
  class {
    @(decorators?.first)
    method() {}
  },
  class {
    @(decorators[first])
    method() {}
  },
  class {
    @decorators[first]
    method() {}
  },
  class {
    @(decorators["first"])
    method() {}
  },
  @(decorators[first])
  class {
    method() {}
  },
  @(decorators[0])
  class {
    method() {}
  },
]

=====================================output=====================================
[
  class {
    @decorator
    method() {}
  },
  class {
    @decorator()
    method() {}
  },
  class {
    @(decorator?.())
    method() {}
  },
  class {
    @(decorators[0])
    method() {}
  },
  class {
    @decorators [0];
    method() {}
  },
  class {
    @(decorators?.[0])
    method() {}
  },
  class {
    @decorators.at(0)
    method() {}
  },
  class {
    @(decorators?.at(0))
    method() {}
  },
  class {
    @(decorators.at?.(0))
    method() {}
  },
  class {
    @decorators.first
    method() {}
  },
  class {
    @(decorators?.first)
    method() {}
  },
  class {
    @(decorators[first])
    method() {}
  },
  class {
    @decorators [first];
    method() {}
  },
  class {
    @(decorators["first"])
    method() {}
  },
  @(decorators[first])
  class {
    method() {}
  },
  @(decorators[0])
  class {
    method() {}
  },
];

================================================================================
`;

exports[`member-expression.js format[acorn] 1`] = `
"Unexpected character '@' (3:5)
  1 | [
  2 |   class {
> 3 |     @(decorator)
    |     ^
  4 |     method() {}
  5 |   },
  6 |   class {
Cause: Unexpected character '@' (3:4)"
`;

exports[`member-expression.js format[espree] 1`] = `
"Unexpected character '@' (3:5)
  1 | [
  2 |   class {
> 3 |     @(decorator)
    |     ^
  4 |     method() {}
  5 |   },
  6 |   class {
Cause: Unexpected character '@'"
`;

exports[`methods.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================

class Yo {
  @foo("hello")
  async plop() {}

  @anotherDecoratorWithALongName("and a very long string as a first argument")
  async plip() {}

  @anotherDecoratorWithALongName("another very long string, but now inline") async plip() {}
}

=====================================output=====================================
class Yo {
  @foo("hello")
  async plop() {}

  @anotherDecoratorWithALongName("and a very long string as a first argument")
  async plip() {}

  @anotherDecoratorWithALongName("another very long string, but now inline")
  async plip() {}
}

================================================================================
`;

exports[`methods.js format[acorn] 1`] = `
"Unexpected character '@' (3:3)
  1 |
  2 | class Yo {
> 3 |   @foo("hello")
    |   ^
  4 |   async plop() {}
  5 |
  6 |   @anotherDecoratorWithALongName("and a very long string as a first argument")
Cause: Unexpected character '@' (3:2)"
`;

exports[`methods.js format[espree] 1`] = `
"Unexpected character '@' (3:3)
  1 |
  2 | class Yo {
> 3 |   @foo("hello")
    |   ^
  4 |   async plop() {}
  5 |
  6 |   @anotherDecoratorWithALongName("and a very long string as a first argument")
Cause: Unexpected character '@'"
`;

exports[`mixed.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
// https://github.com/prettier/prettier/issues/6747

@foo
export default class MyComponent {
  @task
  *foo() {
  }
}
=====================================output=====================================
// https://github.com/prettier/prettier/issues/6747

@foo
export default class MyComponent {
  @task
  *foo() {}
}

================================================================================
`;

exports[`mixed.js format[acorn] 1`] = `
"Unexpected character '@' (3:1)
  1 | // https://github.com/prettier/prettier/issues/6747
  2 |
> 3 | @foo
    | ^
  4 | export default class MyComponent {
  5 |   @task
  6 |   *foo() {
Cause: Unexpected character '@' (3:0)"
`;

exports[`mixed.js format[espree] 1`] = `
"Unexpected character '@' (3:1)
  1 | // https://github.com/prettier/prettier/issues/6747
  2 |
> 3 | @foo
    | ^
  4 | export default class MyComponent {
  5 |   @task
  6 |   *foo() {
Cause: Unexpected character '@'"
`;

exports[`mixed.js format[hermes] 1`] = `
"'class' expected in class (4:1)
  2 |
  3 | @foo
> 4 | export default class MyComponent {
    | ^
  5 |   @task
  6 |   *foo() {
  7 |   }
Cause: 'class' expected in class (4:0)
export default class MyComponent {
^
note: start of class (3:0)
@foo
^"
`;

exports[`mobx.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
import {observable} from "mobx";

@observer class OrderLine {
  @observable price = 0;
  @observable amount = 1;

  constructor(price) {
    this.price = price;
  }

  @computed get total() {
    return this.price * this.amount;
  }

  @action.bound setPrice(price) {
    this.price = price;
  }

  @computed
  get total() {
    return this.price * this.amount;
  }

  @action.bound
  setPrice(price) {
    this.price = price;
  }

  @computed @computed @computed @computed @computed @computed @computed get total() {
    return this.price * this.amount;
  }

  @action handleDecrease = (event) => this.count--;

  @action handleSomething = (event) => doSomething();
}

=====================================output=====================================
import { observable } from "mobx";

@observer
class OrderLine {
  @observable price = 0;
  @observable amount = 1;

  constructor(price) {
    this.price = price;
  }

  @computed get total() {
    return this.price * this.amount;
  }

  @action.bound setPrice(price) {
    this.price = price;
  }

  @computed
  get total() {
    return this.price * this.amount;
  }

  @action.bound
  setPrice(price) {
    this.price = price;
  }

  @computed
  @computed
  @computed
  @computed
  @computed
  @computed
  @computed
  get total() {
    return this.price * this.amount;
  }

  @action handleDecrease = (event) => this.count--;

  @action handleSomething = (event) => doSomething();
}

================================================================================
`;

exports[`mobx.js format[acorn] 1`] = `
"Unexpected character '@' (3:1)
  1 | import {observable} from "mobx";
  2 |
> 3 | @observer class OrderLine {
    | ^
  4 |   @observable price = 0;
  5 |   @observable amount = 1;
  6 |
Cause: Unexpected character '@' (3:0)"
`;

exports[`mobx.js format[espree] 1`] = `
"Unexpected character '@' (3:1)
  1 | import {observable} from "mobx";
  2 |
> 3 | @observer class OrderLine {
    | ^
  4 |   @observable price = 0;
  5 |   @observable amount = 1;
  6 |
Cause: Unexpected character '@'"
`;

exports[`multiline.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
class Foo {
  @deco([
    foo,
    bar
  ]) prop = value;

  @decorator([]) method() {}

  @decorator([
  ]) method() {}

  @decorator({}) method() {}

  @decorator({
  }) method() {}
}

=====================================output=====================================
class Foo {
  @deco([foo, bar]) prop = value;

  @decorator([]) method() {}

  @decorator([]) method() {}

  @decorator({}) method() {}

  @decorator({}) method() {}
}

================================================================================
`;

exports[`multiline.js format[acorn] 1`] = `
"Unexpected character '@' (2:3)
  1 | class Foo {
> 2 |   @deco([
    |   ^
  3 |     foo,
  4 |     bar
  5 |   ]) prop = value;
Cause: Unexpected character '@' (2:2)"
`;

exports[`multiline.js format[espree] 1`] = `
"Unexpected character '@' (2:3)
  1 | class Foo {
> 2 |   @deco([
    |   ^
  3 |     foo,
  4 |     bar
  5 |   ]) prop = value;
Cause: Unexpected character '@'"
`;

exports[`multiple.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
const dog = class {
  @readonly
  @nonenumerable
  @doubledValue
  legs = 4;

  @readonly
  @nonenumerable
  @doubledValue
  eyes() {return 2}
};

const foo = class {
  @multipleDecorators @inline @theyWontAllFitInOneline aVeryLongPropName = "A very long string as value"
  @multipleDecorators @inline @theyWontAllFitInOneline aVeryLongPropName() { "A very long string as value"}
};

=====================================output=====================================
const dog = class {
  @readonly
  @nonenumerable
  @doubledValue
  legs = 4;

  @readonly
  @nonenumerable
  @doubledValue
  eyes() {
    return 2;
  }
};

const foo = class {
  @multipleDecorators @inline @theyWontAllFitInOneline aVeryLongPropName =
    "A very long string as value";
  @multipleDecorators @inline @theyWontAllFitInOneline aVeryLongPropName() {
    "A very long string as value";
  }
};

================================================================================
`;

exports[`multiple.js format[acorn] 1`] = `
"Unexpected character '@' (2:3)
  1 | const dog = class {
> 2 |   @readonly
    |   ^
  3 |   @nonenumerable
  4 |   @doubledValue
  5 |   legs = 4;
Cause: Unexpected character '@' (2:2)"
`;

exports[`multiple.js format[espree] 1`] = `
"Unexpected character '@' (2:3)
  1 | const dog = class {
> 2 |   @readonly
    |   ^
  3 |   @nonenumerable
  4 |   @doubledValue
  5 |   legs = 4;
Cause: Unexpected character '@'"
`;

exports[`parens.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
class X {
  @(computed().volatile())
  x
}

=====================================output=====================================
class X {
  @(computed().volatile())
  x;
}

================================================================================
`;

exports[`parens.js format[acorn] 1`] = `
"Unexpected character '@' (2:3)
  1 | class X {
> 2 |   @(computed().volatile())
    |   ^
  3 |   x
  4 | }
  5 |
Cause: Unexpected character '@' (2:2)"
`;

exports[`parens.js format[espree] 1`] = `
"Unexpected character '@' (2:3)
  1 | class X {
> 2 |   @(computed().volatile())
    |   ^
  3 |   x
  4 | }
  5 |
Cause: Unexpected character '@'"
`;

exports[`redux.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
@connect(mapStateToProps, mapDispatchToProps)
export class MyApp extends React.Component {}

@connect(state => ({ todos: state.todos }))
export class Home extends React.Component {}

=====================================output=====================================
@connect(mapStateToProps, mapDispatchToProps)
export class MyApp extends React.Component {}

@connect((state) => ({ todos: state.todos }))
export class Home extends React.Component {}

================================================================================
`;

exports[`redux.js format[acorn] 1`] = `
"Unexpected character '@' (1:1)
> 1 | @connect(mapStateToProps, mapDispatchToProps)
    | ^
  2 | export class MyApp extends React.Component {}
  3 |
  4 | @connect(state => ({ todos: state.todos }))
Cause: Unexpected character '@' (1:0)"
`;

exports[`redux.js format[espree] 1`] = `
"Unexpected character '@' (1:1)
> 1 | @connect(mapStateToProps, mapDispatchToProps)
    | ^
  2 | export class MyApp extends React.Component {}
  3 |
  4 | @connect(state => ({ todos: state.todos }))
Cause: Unexpected character '@'"
`;

exports[`redux.js format[hermes] 1`] = `
"'class' expected in class (2:1)
  1 | @connect(mapStateToProps, mapDispatchToProps)
> 2 | export class MyApp extends React.Component {}
    | ^
  3 |
  4 | @connect(state => ({ todos: state.todos }))
  5 | export class Home extends React.Component {}
Cause: 'class' expected in class (2:0)
export class MyApp extends React.Component {}
^
note: start of class (1:0)
@connect(mapStateToProps, mapDispatchToProps)
^"
`;
